--- a/MasterPages/PageExt.master
+++ b/MasterPages/PageExt.master
@@ -17,10 +17,7 @@
   <link rel="icon" type="image/ico" href="/MetraNet/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/Res/Styles/SuperBoxSelect.css?v=6.5" />
   <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/xtheme-metranet.css" />
-
-
-
-
+  
   <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/Ext/ext-all.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/JavaScript/ExtHacks.js?v=6.5"></script>
@@ -39,10 +36,9 @@
   <script type="text/javascript" src="/Res/ux/form/LargeNumberField.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/JavaScript/RowSelectionModelOverride.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/Ext/examples/form/states.js?v=6.5"></script>
-
-    <script src="/Res/JavaScript/d3.min.js"></script>
-
-               
+  <script type="text/javascript" src="/Res/JavaScript/jquery.min.js"></script>
+  <script src="/Res/JavaScript/d3.min.js"></script>
+  
   <%=Constants.CJ_PROTECTION_CODE %>               
   <script type="text/javascript">
     var flagOkLoadStore = "false";
