--- a/default/localized/us/styles/RuleEditor_styles.css
+++ b/default/localized/us/styles/RuleEditor_styles.css
@@ -138,6 +138,7 @@
 text-align: center;
 background-color: #f9f9f9;
 background-image: url(/Res/Ext/resources/images/metranet/grid/grid3-hrow2.gif);
+  background-size: contain;
 FONT: normal 11px/15px arial, tahoma, helvetica, sans-serif;
 border-right: 1px solid #eee;
 border-left: 1px solid #d0d0d0;
