--- a/MasterPages/PageExt.master
+++ b/MasterPages/PageExt.master
@@ -37,7 +37,7 @@
   <script type="text/javascript" src="/Res/JavaScript/RowSelectionModelOverride.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/Ext/examples/form/states.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/JavaScript/jquery.min.js"></script>
-  <script src="/Res/JavaScript/d3.min.js"></script>
+  <script type="text/javascript" src="/Res/JavaScript/d3.min.js"></script>
   
   <%=Constants.CJ_PROTECTION_CODE %>               
   <script type="text/javascript">
