--- a/default/localized/us/styles/NavStyles.css
+++ b/default/localized/us/styles/NavStyles.css
@@ -11,7 +11,7 @@
     font-size: 11px;
     font-family: tahoma,arial,verdana,sans-serif;
     border-color: #d0d0d0;
-    background-image: url(/res/images/metranet/panel/white-top-bottom.gif);
+    /*background-image: url(/res/ext/resources/images/metranet/panel/white-top-bottom.gif);*/
     BACKGROUND-COLOR: #F0F0F0;
 }
 
