--- a/MasterPages/MetraNetExt.master
+++ b/MasterPages/MetraNetExt.master
@@ -65,10 +65,14 @@
     border : 0px;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
     filter: alpha(opacity=65);
-    /*background: #115BA6;*/
-    background: rgba(0,0,0,.65);
-        
+     background: rgba(0,0,0,.65);
     color: #FFF;
+}
+
+
+#north-panel  .x-panel-tbar .x-toolbar 
+{
+  height: 42px;
 }
 
 .x-btn button,.x-btn span 
@@ -339,8 +343,8 @@ height: 18px !important;
             autoEl: {
                 tag: 'img',
                 src: '/Res/Images/login/metranet_Logo_Wht.png',
-                width: 150,
-                height:25
+                width: 200,
+                height:30
             }
 
          },
@@ -394,7 +398,7 @@ height: 18px !important;
 
       bbar:[
         {
-            text: '<span id="subscriberInfoLabel"> Account > </span><span id="subscriberInfo">None Selected</span>',
+            //text: '<span id="subscriberInfo">Account:</span><span id="subscriberInfo">None Selected</span>',
             handler: function() {
                 Account.RefreshWithMenu();
                 
