Fixed issue with missing subscriberInfo element

--- a/MasterPages/MetraNetExt.master
+++ b/MasterPages/MetraNetExt.master
@@ -398,7 +398,7 @@ height: 18px !important;
 
       bbar:[
         {
-            //text: '<span id="subscriberInfo">Account:</span><span id="subscriberInfo">None Selected</span>',
+            text: '<span id="subscriberInfo"></span>',
             handler: function() {
                 Account.RefreshWithMenu();
                 
