--- a/Views/Shared/_PageLayout.cshtml
+++ b/Views/Shared/_PageLayout.cshtml
@@ -8,7 +8,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" media="all" href="/Res/960Grid/code/css/reset.css" />
   <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
-  <link href="@Url.Content("~/Content/Page.css")" rel="stylesheet" type="text/css" />
+  <link href="@Url.Content("~/Content/Page-Gray.css")" rel="stylesheet" type="text/css" />
   
   <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
   <script src="@Url.Content("~/Scripts/jquery-ui-1.8.17.min.js")" type="text/javascript"></script>
