CORE-8070 - Error when running PrecompileMetraSites.bat
True fix is really old code which didn't use the correct model namespace, bad updates to the web.config, and missing tostring on model objects data... ugh.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
   
   @if (HttpContext.Current.Items.Contains(@Constants.StyleSection))
   {
-    @Html.Raw(HttpContext.Current.Items[@Constants.StyleSection])
+    @Html.Raw(HttpContext.Current.Items[@Constants.StyleSection].ToString())
   }
   @RenderSection("Style", false)      
 
@@ -57,7 +57,7 @@
   @RenderSection("JavaScript", false)
   @if (HttpContext.Current.Items.Contains(@Constants.JavaScriptSection))
   {
-    @Html.Raw(HttpContext.Current.Items[@Constants.JavaScriptSection])
+    @Html.Raw(HttpContext.Current.Items[@Constants.JavaScriptSection].ToString())
   }
 </body>
 
