--- a/Views/Account/ChangePassword.cshtml
+++ b/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MvcApplication1.Models.ChangePasswordModel
+﻿@model ASP.Models.ChangePasswordModel
 
 @{
     ViewBag.Title = "Change Password";
