CORE-8105 Made Account and Menu panes resizable

--- a/MasterPages/MetraNetExt.master
+++ b/MasterPages/MetraNetExt.master
@@ -340,7 +340,7 @@
     id: 'west-panel',
         frame:false,
     title: '',
-        split: false,
+        split: true,
     width: 200,
     minSize: 175,
     maxSize: 400,
